# qgis-earthengine-plugin

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  .python.env  .qgis-plugin-ci  .release-please-manifest.json  .secrets.example  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Map.py  README.md  __init__.py  ee_auth.py  ee_plugin.py  index.html  metadata.txt  mkdocs.yml  pavement.py  provider.py  pyproject.toml  pytest.ini  qgis_pycharm.bat  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml  symbology-style.db  test_extent_transformation.tif  utils.py
.github/: FUNDING.yml  release-please-config.json  release-please-manifest.json
contrib/: utils.py
docs/: README.md  creating_ui_components.md  index.md  installation.md  quickstart.md  troubleshooting.md  usage.md
ee_plugin/: .bandit  LICENSE  Makefile  Map.py  __init__.py  __version__.py  compile.cmd  config.py  dialog.py  ee_auth.py  ee_catalog.py  ee_dock_widget.py  ee_dock_widget_base.ui  ee_layer.py  ee_plugin.py  extra_deps.py  feedback_context.py  home_plugin.html  home_plugin.md  identify.py  logging.py  metadata.txt  palettes.py  pb_tool.cfg  plugin_upload.py  provider.py  resources.qrc  utils.py
examples/: Sentinel-2.qgs  basic_geometries.py  basic_image.py  download_by_canvas.py  example_sentinel2.py  hillshade.py  hillshade_and_water.py  landsat_median.py  map_add_features.py  map_center_object.py  map_center_object_no_zoom.py  map_get_bounds.py  map_get_center.py  map_set_center.py  map_set_zoom.py  srtm_hillshade.model3  (+5 more)
(+129 files in other folders)
