[project]
name = "qgis-earthengine-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.5"
dependencies = [
    "earthengine-api>=0.1.335",
    "httplib2>=0.22.0",
    "ratelim>=0.1.6",
    "requests>2.4",
    "six>=1.13",
]

[dependency-groups]
dev = [
    "future>=1.0.0",
    "paver>=1.3.4",
    "pre-commit>=4.1.0",
    "pyqt5>=5.15.11",
    "pytest-cov>=6.0.0",
    "pytest-qgis==2.1.0",
    "pytest==7.4.3",
]
